--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "8026ff91-9e86-4f19-bd27-c139e9e8bf7a"
 authors = ["Michael Myers"]
 version = "1.0.0-DEV"
 
+[deps]
+Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+
 [compat]
 julia = "1"
 
