--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,11 @@ JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 
 [compat]
-julia = "1"
+Chain = "0.5"
+EzXML = "1.1"
+JLD = "0.13"
+OrderedCollections = "1.6"
+julia = "1.6.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
