--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "1.1.1"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 
 [compat]
