--- a/Project.toml
+++ b/Project.toml
@@ -6,19 +6,18 @@ version = "1.3.0"
 [deps]
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 
 [compat]
 Chain = "0.5"
 EzXML = "1.1"
-JLD = "0.13"
 OrderedCollections = "1.6"
 julia = "1.6.3"
 
 [extras]
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Pkg", "Test"]
+test = ["JLD", "Pkg", "Test"]
